test/model.conf
# R: Request
[request_definition]
r = sub, act

# P: Policy
[policy_definition]
p = sub, act

# E: Policy effect
[policy_effect]
e = some(where (p.eft == allow))

# M: Matcher
[matchers]
m = r.sub == p.sub && regexMatch(r.act, p.act)